[package]
name = "field-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
num-bigint = "0.4.6"
rand = "0.8.5"
zeroize = "1.8.1"

[dev-dependencies]
ark-bn254 = "0.4.0"
